# web-apps

apps/keadex-docs/diagrams/: keadex-mina.drawio
apps/keadex-docs/docs/keadex-mina/: project-structure.mdx
apps/keadex-mina/: package.json
apps/keadex-mina/src/: App.tsx
apps/keadex-mina/src-tauri/: Cargo.toml  tauri.conf.json
apps/keadex-mina/src-tauri/src/: controller.rs  lib.rs  logger.rs  main.rs  repository.rs
apps/keadex-mina/src-tauri/src/controller/: diagram_controller.rs  mod.rs
apps/keadex-mina/src-tauri/src/core/: app.rs  data_synchronizer.rs  mod.rs  root_resolver.rs  store.rs
apps/keadex-mina/src-tauri/src/model/: base_entity.rs  container.rs  mod.rs  person.rs  project_settings.rs  software_system.rs
apps/keadex-mina/src-tauri/src/model/c4_entity/: boundary.rs  component.rs  container.rs  mod.rs  person.rs  relationship.rs  software_system.rs
apps/keadex-mina/src-tauri/src/model/diagram/: container.rs  diagram_spec.rs  mod.rs  person.rs  software_system.rs
apps/keadex-mina/src-tauri/src/model/diagram/graphic/: diagram_entity.rs  mod.rs  position.rs  shape.rs  size.rs
apps/keadex-mina/src-tauri/src/repository/: diagram_repository.rs  mod.rs
apps/keadex-mina/src-tauri/src/resolver/: mod.rs
