[package]
name = "keadex_mina"
version = "0.1.0-alpha.1"
description = "Desktop application to draw, manage and share the architectures of software systems."
authors = ["Keadex"]
license = "MIT"
repository = ""
default-run = "keadex_mina"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = ["isolation"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.14", features = ["api-all", "isolation"] }
log = { version = "0.4", features = ["serde"] }
env_logger = "0.8.4"
state = "0.5"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
notify = "4.0.17"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
